Ensures donate info is visible on small screens

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -62,7 +62,7 @@ a {
 	display: flex;
 	flex-wrap: nowrap;
 	justify-content: space-between;
-	padding: 1em;
+	padding: 0.5em;
 	position: absolute;
 	top: 0;
 	width: 100%;
@@ -341,7 +341,7 @@ a {
 	flex-direction: column;
 	font-size: 2.5em;
 	left: 0;
-	margin: 2.25em auto 1.6em auto;
+	margin: 2em auto 1.6em auto;
 	max-width: 960px;
 	min-height: 100px;
 	position: absolute;
@@ -768,7 +768,7 @@ footer {
 
 	p {
 		margin: 0 2em;
-		font-size: 0.5em;
+		font-size: 0.45em;
 		text-align: center;
 	}
 
@@ -951,7 +951,8 @@ footer {
 
 .donate-tiers {
 	display: flex;
-	margin: 0.5em 0 0 0;
+	margin: 0.4em 0 0 0;
+	padding-top: 0.1em;
 	position: relative;
 	z-index: 3;
 }
@@ -1355,6 +1356,7 @@ img.center {
 	.header {
 		align-items: center;
 		flex-direction: column;
+		padding-top: 1em;
 	}
 
 	.header__buttons {
